# SpectraFlow

./: .gitattributes  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: BusManager.cpp  BusManager.h  FFTAnalyzer.cpp  FFTAnalyzer.h  FIFOManager.cpp  FIFOManager.h  WaveformAnalyzer.cpp  WaveformAnalyzer.h
Source/GUI/: ColorManager.cpp  ColorManager.h  InsertPanel.cpp  InsertPanel.h  SpectrumDisplay.h  SpectrumRenderer.cpp  SpectrumRenderer.h  TopBar.cpp  TopBar.h  UIController.cpp  UIController.h  WaveformRenderer.cpp  WaveformRenderer.h
Source/Utils/: LockFreeQueue.cpp  LockFreeQueue.h  ParameterManager.cpp  ParameterManager.h
